--- a/matches.html
+++ b/matches.html
@@ -138,14 +138,19 @@
         הנחישות הזו היא זו שהביאה את הניצחון – אולי לא מרשים, אבל כזה שמראה על אופי מנצח.
       </p>
 
-      <div class="personal-note">
-        <p>
-          את המשחק הראשון ראיתי עם אחי <strong>תומר</strong>.  
-          הוא אוהד יונייטד ואני כמובן אוהד ארסנל.  
-          ישבנו יחד, שתינו בירה, אכלנו פיצה ונהנינו מהאווירה.  
-          למרות היריבות – היה כיף לחזור שוב ולפתוח את עונת הפרמייר ליג מול המסך יחד.
-        </p>
-      </div>
+     <div class="personal-note">
+  <p>
+    את המשחק הראשון ראיתי עם אחי <strong>תומר</strong>.  
+    הוא אוהד יונייטד ואני כמובן אוהד ארסנל.  
+    ישבנו יחד, שתינו בירה, אכלנו פיצה ונהנינו מהאווירה.  
+    למרות היריבות – היה כיף לחזור שוב ולפתוח את עונת הפרמייר ליג מול המסך יחד.
+  </p>
+  <blockquote style="margin-top:15px; padding:10px; border-right:4px solid #ccc; background:#f9f9f9; border-radius:6px;">
+    <strong>תגובתו של תומר:</strong>  
+    "תודה רבה על האירוח המצוין, לגבי המשחק – תוצאת תיקו הייתה משקפת את מהלך המשחק."
+  </blockquote>
+</div>
+
 
       <div class="ars.jpg">
        <img src="ars.jpg" alt="תיאור של התמונה" width="300">
@@ -194,6 +199,7 @@
 
 </body>
 </html>
+
 
 
 
