--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
 <section>
   <h2>לקראת המשחק הקרוב</h2>
   <p>
-     ביום שישי יעודכן !  
+     ארסנל מגיעה למחזור השני אחרי ניצחון חשוב וקשה בחוץ נגד מנ' יונייטד, והיא תשחק מול לידס יונייטד העולה החדשה שניצחה גם היא 1-0 את אברטון בבית.   
     <br><br>
-       
+       ארסנל בביתה הפעם תרצה לשלוט במשחק, להראות יכולות יותר טובות מהמחזור הראשון ולבוא עם הצהרת כוונות במשחק הביתי הראשון שלה.
     <br><br>
-    
+    אני מאמין שארטטה אמר לשחקנים אחרי המחזור הראשון שהם צריכים להיות טובים יותר, לשחק התקפי ולשלוט בקצב המשחק. שחקני הרכש ובמיוחד החלוץ השוודי גיורקס ירצו להראות למה הביאו אותם לקבוצה. 
+ <br><br>
+    האוהדים רוצים לראות שליטה בכדור, משחק התקפי, הגנה מסודרת ומשחק הקרבה, אנחנו רוצים לראות ניצחון !! יאללה ארסנל 🔴⚪
   </p>
 </section>
 
@@ -121,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
