--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <br><br>
     אני מאמין שארטטה אמר לשחקנים אחרי המחזור הראשון שהם צריכים להיות טובים יותר, לשחק התקפי ולשלוט בקצב המשחק. שחקני הרכש ובמיוחד החלוץ השוודי גיורקס ירצו להראות למה הביאו אותם לקבוצה. 
  <br><br>
+  מבחינת הסגל של ארסנל האברץ דווח כי נפצע וייעדר לזמן לא ידוע כרגע, כריסטיאן נורגראד הקשר עדיין בספק למשחק בגלל פציעה. ארטטה צפוי לפתוח עם אותו הרכב מהמחזור הראשון אבל עוד מוקדם לקבוע.
+    <br><br>
     האוהדים רוצים לראות שליטה בכדור, משחק התקפי, הגנה מסודרת ומשחק הקרבה, אנחנו רוצים לראות ניצחון !! יאללה ארסנל 🔴⚪
   </p>
 </section>
@@ -123,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
