--- a/lineups.html
+++ b/lineups.html
@@ -144,7 +144,7 @@
         <tr>
           <th>עמדה</th>
           <th>ארסנל</th>
-          <th>מנצ'סטר יונייטד</th>
+          <th>לידס יונייטד</th>
         </tr>
       </thead>
       <tbody>
@@ -193,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
