--- a/matches.html
+++ b/matches.html
@@ -174,7 +174,7 @@
         
       </p>
 גיורקס בלט עם צמד נהדר, טימבר כבש פעמיים מקרן, וסאקה הוסיף גם הוא שער נפלא.
-בנוסף, ההצגה הגדולה של המשחק הייתה השחקן הצעיר מקס דאומן, שעלו להופעת בכורה בפריימרליג והראה יכולות מרשימות מאוד, שנותנות לארטטה חומר למחשבה לגבי הפוטנציאל שלו בקבוצה.
+בנוסף, ההצגה הגדולה של המשחק הייתה השחקן הצעיר מקס דאומן, שעלה להופעת בכורה בפריימרליג והראה יכולות מרשימות מאוד, שנותנות לארטטה חומר למחשבה לגבי הפוטנציאל שלו בקבוצה.
       <div class="personal-note">
         <p>בסיום, ארסנל רשמה ניצחון מרשים של 0-5 במשחק הבית הראשון שלה לעונה. הפעם צפיתי במשחק לבד בבית, וההנאה הגדולה הייתה בעיקר מהגולים – עכשיו נשאר רק לקוות שהשחקנים ימשיכו להשתפר ממשחק למשחק.
         
@@ -287,6 +287,7 @@ function toggleReview(header) {
 
 </body>
 </html>
+
 
 
 
