--- a/matches.html
+++ b/matches.html
@@ -260,26 +260,26 @@ function toggleReview(header) {
           </tr>
         </thead>
         <tbody>
-          <tr><td>1</td><td>מנצ'סטר סיטי</td><td>1</td><td>3</td></tr>
-          <tr><td>2</td><td>טוטנהאם</td><td>1</td><td>3</td></tr>
-          <tr><td>3</td><td>סנדרלנד</td><td>1</td><td>3</td></tr>
-          <tr><td>4</td><td>ליברפול</td><td>1</td><td>3</td></tr>
-          <tr><td>5</td><td>נוטינגהאם</td><td>1</td><td>3</td></tr>
-          <tr><td>6</td><td>ארסנל</td><td>1</td><td>3</td></tr>
-           <tr><td>7</td><td>לידס</td><td>1</td><td>3</td></tr>
-          <tr><td>8</td><td> ברייטון</td><td>1</td><td>1</td></tr>
-          <tr><td>9</td><td>פולהאם</td><td>1</td><td>1</td></tr>
-          <tr><td>10</td><td>אסטון וילה</td><td>1</td><td>1</td></tr>
-          <tr><td>11</td><td>ניוקסאל </td><td>1</td><td>1</td></tr>
-          <tr><td>12</td><td>קריסטל פאלאס</td><td>1</td><td>1</td></tr>
-          <tr><td>13</td><td>צ'לסי</td><td>1</td><td>1</td></tr>
-          <tr><td>14</td><td>אברטון</td><td>1</td><td>0</td></tr>
-          <tr><td>15</td><td>מנצ'סטר יונייטד</td><td>1</td><td>0</td></tr>
-          <tr><td>16</td><td>בורנמות</td><td>1</td><td>0</td></tr>
-          <tr><td>17</td><td>ברנטפורד</td><td>1</td><td>0</td></tr>
-          <tr><td>18</td><td>ווסטאהם</td><td>1</td><td>0</td></tr>
-          <tr><td>19</td><td>ברנלי</td><td>1</td><td>0</td></tr>
-          <tr><td>20</td><td>וולבס</td><td>1</td><td>0</td></tr>
+          <tr><td>1</td><td>ארסנל</td><td>2</td><td>6</td></tr>
+          <tr><td>2</td><td>טוטנהאם</td><td>2</td><td>6</td></tr>
+          <tr><td>3</td><td>ליברפול</td><td>2</td><td>6</td></tr>
+          <tr><td>4</td><td>צ'לסי</td><td>2</td><td>4</td></tr>
+          <tr><td>5</td><td>נוטינגהאם</td><td>2</td><td>4</td></tr>
+          <tr><td>6</td><td>מנ' סיטי</td><td>2</td><td>3</td></tr>
+           <tr><td>7</td><td>סנדרלנד</td><td>2</td><td>3</td></tr>
+          <tr><td>8</td><td> אברטון</td><td>2</td><td>3</td></tr>
+          <tr><td>9</td><td>בורנמות</td><td>2</td><td>3</td></tr>
+          <tr><td>10</td><td>ברנטפורד </td><td>2</td><td>3</td></tr>
+          <tr><td>11</td><td>ברנלי </td><td>2</td><td>3</td></tr>
+          <tr><td>12</td><td> לידס</td><td>2</td><td>3</td></tr>
+          <tr><td>13</td><td>פולאהם</td><td>2</td><td>2</td></tr>
+          <tr><td>14</td><td>קריסטל פאלאס</td><td>2</td><td>2</td></tr>
+          <tr><td>15</td><td> ניוקסאל</td><td>2</td><td>1</td></tr>
+          <tr><td>16</td><td>מנ' יונייטד</td><td>2</td><td>1</td></tr>
+          <tr><td>17</td><td>אסטון וילה</td><td>2</td><td>1</td></tr>
+          <tr><td>18</td><td>ברייטון</td><td>2</td><td>1</td></tr>
+          <tr><td>19</td><td>וולבס</td><td>2</td><td>0</td></tr>
+          <tr><td>20</td><td>ווסטאהם</td><td>2</td><td>0</td></tr>
         </tbody>
       </table>
     </div>
@@ -287,6 +287,7 @@ function toggleReview(header) {
 
 </body>
 </html>
+
 
 
 
