--- a/index.html
+++ b/index.html
@@ -9,60 +9,132 @@
       direction: rtl;
       text-align: right;
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 0;
+      background-color: #f4f4f9;
+      color: #222;
     }
 
+    /* --- פס צבעי ארסנל --- */
+    .arsenal-bar {
+      height: 12px;
+      background: linear-gradient(to right, red 50%, white 50%);
+    }
+
+    /* --- עיצוב אזור הכותרת עם תמונת רקע --- */
     header {
+      position: relative;
       text-align: center;
+      color: white;
+      padding: 60px 20px;
+      background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Emirates_Stadium_-_East_stand_Club_Level.jpg/1920px-Emirates_Stadium_-_East_stand_Club_Level.jpg") no-repeat center center/cover;
+    }
+
+    /* שכבת כהות מעל התמונה */
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.55);
+      z-index: 0;
+    }
+
+    header h1, header p, header img {
+      position: relative;
+      z-index: 1;
     }
 
     header img {
-      width: 200px;
+      width: 120px;
+      margin-top: 10px;
     }
 
     nav {
       text-align: center;
-      margin-bottom: 20px;
+      background: #fff;
+      padding: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     nav a {
-      margin: 0 10px;
+      margin: 0 15px;
       text-decoration: none;
       color: darkred;
       font-weight: bold;
     }
 
     section {
-      margin-bottom: 30px;
+      margin: 30px auto;
+      max-width: 800px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    }
+
+    section h2, section h3 {
+      color: darkred;
+    }
+
+    .question-box {
+      background-color: #f9f9f9;
+      padding: 15px;
+      border: 1px solid #ccc;
+      width: 100%;
+      max-width: 400px;
+      margin: 20px auto;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    input[type="text"] {
+      padding: 8px;
+      width: 80%;
+      border: 1px solid #aaa;
+      border-radius: 6px;
+    }
+
+    button {
+      padding: 8px 12px;
+      background-color: darkred;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: #b30000;
     }
 
     footer {
       text-align: center;
       font-size: 14px;
-      margin-top: 50px;
+      padding: 15px;
+      background-color: #222;
+      color: #ddd;
+      margin-top: 40px;
     }
 
-    .question-box {
-      background-color: #f9f9f9;
-      padding: 10px;
-      border: 1px solid #ccc;
-      width: 300px;
-      margin: auto;
+    footer a {
+      color: #f2a900;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
 
+  <!-- פס צבעי ארסנל -->
+  <div class="arsenal-bar"></div>
+
   <header>
-    <h1>Arsenal</h1>
+    <h1>בלוג ארסנל של עידן</h1>
     <img src="https://upload.wikimedia.org/wikipedia/he/thumb/5/53/Arsenal_FC.svg/1200px-Arsenal_FC.svg.png" alt="Arsenal Logo">
-    <p><u>ברוכים הבאים לבלוג של עידן על ארסנל</u></p>
+    <p><u>ברוכים הבאים לבלוג שלי על ארסנל</u></p>
   </header>
 
   <nav>
-    <a href="index.html">ראשי</a>
-    <a href="matches.html">סיקור משחקים </a>
-     <a href="lineups.html">עמוד המשחק  </a>
     <a href="https://idanschmidt.github.io/Idan-schmidt--QA/">לבלוג QA שלי</a>
   </nav>
 
@@ -72,24 +144,20 @@
     במהלך העונה אעדכן כאן לפני ואחרי משחקים, אשתף מחשבות, רגשות ופרשנויות – באהבה ובקנאות של אוהד אמיתי.</p>
   </section>
 
-<section>
-  <h2>לקראת המשחק הקרוב</h2>
-  <p>
-    <br><br>
-    <br><br>
- <br><br>
-    <br><br>
-    
-  </p>
-</section>
-
-
+  <section>
+    <h2>סיכום שלי למשחק:</h2>
+    <p>
+      <br><br>
+      <br><br>
+      <br><br>
+    </p>
   </section>
 
  <section class="question-box">
   <h3>חידת השבוע</h3>
   <p>מי מחזיק בשיא ההופעות בארסנל בכל הזמנים?</p>
-  <input type="text" id="answer" />
+  <input type="text" id="answer" placeholder="הכנס תשובה כאן..."/>
+  <br>
   <button onclick="checkAnswer()">שלח תשובה</button>
   <script>
     function checkAnswer() {
@@ -107,7 +175,6 @@
   </script>
 </section>
 
-
   <section>
     <h3>הצטרפו אליי!</h3>
     <p>אם אתם אוהדי ארסנל או חובבי כדורגל – אני מזמין אתכם לעקוב אחרי הבלוג הזה, ולהיות חלק מהחוויה!</p>
@@ -115,12 +182,14 @@
   </section>
 
   <footer>
-    <p>עודכן לאחרונה: 27 באוגוסט 2025</p>
+    <p>עודכן לאחרונה: 1.9.25</p>
     <p><a href="https://www.365scores.com/he/football/team/arsenal-104" target="_blank">צפו בתוצאות וחדשות על ארסנל</a></p>
   </footer>
 
 </body>
 </html>
+
+
 
 
 
