--- a/index.html
+++ b/index.html
@@ -147,9 +147,12 @@
   <section>
     <h2>סיכום שלי למשחק:</h2>
     <p>
-      <br><br>
-      <br><br>
-      <br><br>
+    במחצית הראשונה הצלחנו לשלוט בעיקר במרכז המגרש. ניסינו כמה קרנות, אבל הן לא ממש סיכנו את השער של ליברפול. מצד שני, גם הם לא הקשו במיוחד על דויד ראיה, והמשחק התנהל רובו באמצע – עם יתרון קל לארסנל.  <br><br>
+      <br><br>במחצית השנייה התמונה השתנתה לחלוטין: ליברפול יצאה קדימה, לחצה ותקפה, ואנחנו בעיקר נגררנו אחריהם וראינו לאן המשחק יוביל. לדעתי, ארטטה היה חייב לעשות חילופים התקפיים כבר בהפסקה – להראות שהוא רוצה לנצח, לסמן לשחקנים, לאוהדים ולכל הליגה שהשנה אנחנו הולכים עד הסוף על אליפות. אבל כרגיל, הוא חיכה יותר מדי… ובסוף גם ספגנו שער (יפה, יש להודות).
+      <br><br>התוצאה: הפסד מתסכל באנפילד מול האלופה המכהנת.
+אבל מה? זה רק משחק אחד. נקווה שהשחקנים הפצועים יחזרו אחרי הפגרה, שנחזור לנצח, ונשמור על החלום בחיים.
+
+שיהיה לכולנו פגרה נעימה – ובעיקר בלי פציעות 🙏❤️
     </p>
   </section>
 
@@ -188,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
