--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <section>
     <h2>הבלוג שלי</h2>
     <p>שלום לכולם, אני עידן שמידט, בן 28, אוהד מושבע של ארסנל מאז שאני זוכר את עצמי. החלטתי להקים את הבלוג הזה כדי לפרוק רגשות,  ולשתף אתכם בחוויות שלי לאורך העונה.<br>
-    במהלך העונה אשתף את הדעות שלי ואת מה שעייני רואות במשחקים – באהבה ובקנאות של אוהד אמיתי.</p>
+    במהלך העונה אשתף את הדעות שלי ואת מה שעיניי רואות במשחקים – באהבה ובקנאות של אוהד אמיתי.</p>
   </section>
 
   <section>
@@ -191,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
